--- a/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Nurses/Index.cshtml
@@ -138,6 +138,7 @@
             </div>
             <input type="hidden" name="asc" value="@(ViewData["Asc"])" />
             <input type="hidden" name="order" value="@(ViewData["Order"])" />
+            <input type="hidden" name="order" value="@(ViewData["filter"])" />
         }
         <input type="submit" class="icon-search fa-7x" value="&#xf002;" style="font-family: FontAwesome;height:35px;width:35px; position:absolute;right:0;background-color:transparent;margin-right:5px;margin-top:1px; border: 2px solid #167ce9;font-size: 1.2em;text-align: center;border-radius: 20px;outline:none !important" />
     </div>
