--- a/HospitalScheduling/HospitalScheduling/Views/PastShifts/Details.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/PastShifts/Details.cshtml
@@ -2,35 +2,66 @@
 
 @{
     ViewData["Title"] = "Details";
+    ViewData["Active"] = "DoctorShifts";
 }
 
-<h2>Details</h2>
-
-<div>
-    <h4>PastShifts</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Doctor)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Doctor.Phone)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Shift)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Shift.ShiftID)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.ShiftEndDate)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.ShiftEndDate)
-        </dd>
-    </dl>
+<meta http-equiv="Refresh" content="60" />
+<div class="hero-wrap" style="background-image: url('images/bg_6.jpg'); background-attachment:fixed;height:200px">
+    <div class="overlay"></div>
+    <div class="container" style="height:200px">
+        <div class="row no-gutters slider-text align-items-center justify-content-center" style="height:200px" data-scrollax-parent="true">
+            <div class="col-md-8 ftco-animate text-center fadeInUp ftco-animated">
+                <p class="breadcrumbs"><span class="mr-2"><a asp-action="Index" asp-controller="Home">Home</a></span> <span>Past Shifts - @ViewData["Title"]</span></p>
+                <h1 class="mb-3 bread">Past Shifts - @ViewData["Title"]</h1>
+            </div>
+        </div>
+    </div>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model.HistoryID">Edit</a> |
-    <a asp-action="Index">Back to List</a>
-</div>
+<br />
+<center>
+    <div>
+        <table>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Doctor.Name): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Doctor.Name)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Doctor.Phone): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Doctor.Phone)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Shift.Name): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Shift.Name)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>@Html.DisplayNameFor(model => model.Shift.StartDate): </b>
+                </td>
+                <td>@Html.DisplayFor(model => model.Shift.StartDate)</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>Shift ends in: </b>
+                </td>
+                <td>@(new DateTime(Model.Shift.StartDate.AddHours(8).Subtract(DateTime.Now).Ticks).ToLongTimeString())</td>
+            </tr>
+            <tr>
+                <td style="min-width:8em;text-align:justify">
+                    <b>End Date: </b>
+                </td>
+                <td>@Model.Shift.StartDate.AddHours(8)</td>
+            </tr>
+        </table>
+    </div>
+    <br />
+    <div>
+        <a asp-action="Index" class="btn btn-info">Back to List</a>
+    </div>
+    <br />
+</center>
