--- a/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Shared/_Layout.cshtml
@@ -34,7 +34,7 @@
     <link rel="stylesheet" href="~/css/icomoon.css">
     <link rel="stylesheet" href="~/css/style.css">
 
-    <script>
+    <script type="text/javascript">
         function displaySons() {
             if (document.getElementById('sonsbox') != null) {
                 if (document.getElementById('sonsbox').value == "false") {
@@ -77,10 +77,6 @@
 
                     <li class="@((ViewData["Active"]!=null && ViewData["Active"].Equals("Shifts")) ? "nav-item active".ToString() : "nav-item".ToString())">
                         <a asp-area="" asp-controller="Shifts" asp-action="Index" class="nav-link">Shifts</a>
-                    </li>
-
-                    <li class="@((ViewData["Active"]!=null && ViewData["Active"].Equals("DoctorShifts")) ? "nav-item active".ToString() : "nav-item".ToString())">
-                        <a asp-area="" asp-controller="DoctorShifts" asp-action="Index" class="nav-link">Assigned Shifts</a>
                     </li>
 
                     <li class="@((ViewData["Active"]!=null && ViewData["Active"].Equals("HolidayForms")) ? "nav-item active".ToString() : "nav-item".ToString())">
