--- a/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
+++ b/HospitalScheduling/HospitalScheduling/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
                         {
                             <h1 class="mb-4">Welcome, @User.Identity.Name</h1>
                             <h6 class="mb-3 bread">To see the schedules you can visit @Html.ActionLink("Doctors", "Index", "Doctors") or @Html.ActionLink("Nurses", "Index", "Nurses").</h6>
-                            <h6 class="mb-3 bread">You can also visit @Html.ActionLink("Holiday Forms", "Index", "HollidayForms") to schedule your holidays.</h6>
+                            <h6 class="mb-3 bread">You can also visit @Html.ActionLink("Vacations", "Index", "Vacations") to schedule your vacations.</h6>
                         }
                     }
                 </div>
